--- a/tesk.html
+++ b/tesk.html
@@ -10,8 +10,8 @@
             <div>
                 <img src="lap2.jpg"  height="200px" id="photo" >
                 <h3 id="text" >Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni delectus quas quos sapiente ipsam odit perspiciatis rerum nam voluptas? Voluptatem corporis totam nemo dolore rerum accusamus similique animi! Facere, porro!</h3>
-                <button id="btn">not working</button>
-                <h1>fsadfsdf</h1>
+                <button id="btn">Not Working</button>
+                
             </div>
 
     </section>
