--- a/tesk.html
+++ b/tesk.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400..900&family=Cuprum:ital,wght@0,400..700;1,400..700&family=Orbitron:wght@400..900&family=Raleway:ital,wght@0,100..900;1,100..900&family=Yatra+One&display=swap" rel="stylesheet">
+
 </head>
 <body>
 
