--- a/3mart.html
+++ b/3mart.html
@@ -10,7 +10,7 @@
 
             <input type="text" placeholder="Enter your Detials" required><br><br>
             <button onclick = "add()" >Add Input</button>
-            <button >submit</button>
+            <button >submit</button><br>
 
 
     <script src="3mart.js"></script>
