--- a/26marform.html
+++ b/26marform.html
@@ -6,22 +6,24 @@
     <title>Document</title>
 </head>
 <body>
-    <form action="">
+        <h1>.... USER_DATA_FORM ....</h1>
+
+    <h2>
+     <form action="" onsubmit="return data()">
+
         <label for="">Name :</label>
-        <input type="text" id="num1"> <br><br>
+        <input type="text" id="name" placeholder="Fill With Your Name"> <br><br>
       
-        <label for="">Age :</label>
-        <input type="text" id="age"> <br><br>
+        <label for="">Age  :</label>
+        <input type="text" id="age" placeholder="Fill with Your Age"> <br><br>
 
         <label for="">Contact :</label>
-        <input type="text" id="cont"> <br><br>
+        <input type="text" id="cont" placeholder="Fill with Your Contact"> <br><br>
 
         <input type="submit">
-
+      
      </form>
-   
-
-
+    </h2>
 
     <script src="26marform.js"></script>
 </body>
