--- a/27marapi.html
+++ b/27marapi.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    ,<script src="27marapi.js"> </script>
+    <script src="27marapi.js"> </script>
 </body>
 </html>
