--- a/login.html
+++ b/login.html
@@ -6,19 +6,11 @@
     <title>Document</title>
 </head>
 <body>
-        <h1>.... SIGNUP_PAGE ....</h1>
-
-    <h2>
-     <form action="" onsubmit="return data()">
+    <h1>LOGIN PAGE</h1>
+    <form action="" onsubmit="return dt()">
 
         <label for="">Name :</label>
         <input type="text" id="name" placeholder="Fill With Your Name"> <br><br>
-
-        <label for="">Contact :</label>
-        <input type="text" id="cont" placeholder="Fill with Your Contact"> <br><br>
-
-        <label for="">City  :</label>
-        <input type="text" id="city" placeholder="Fill with Your city"> <br><br>
 
         <label for="">Password  :</label>
         <input type="text" id="pass" placeholder="Fill with Your password"> <br><br>
@@ -27,8 +19,8 @@
         <input type="submit">
       
      </form>
-    </h2>
 
-    <script src="26marform.js"></script>
+
+    <script src="login.js"></script>
 </body>
 </html>
