--- a/26marform.html
+++ b/26marform.html
@@ -18,10 +18,10 @@
         <input type="text" id="cont" placeholder="Fill with Your Contact"> <br><br>
 
         <label for="">City  :</label>
-        <input type="text" id="city" placeholder="Fill with Your city"> <br><br>
+        <input type="text" id="city" placeholder="Fill with Your City"> <br><br>
 
         <label for="">Password  :</label>
-        <input type="text" id="pass" placeholder="Fill with Your password"> <br><br>
+        <input type="text" id="pass" placeholder="Fill with Your Password"> <br><br>
         
 
         <input type="submit">
