--- a/login.html
+++ b/login.html
@@ -13,7 +13,7 @@
         <input type="text" id="name" placeholder="Fill With Your Name"> <br><br>
 
         <label for="">Password  :</label>
-        <input type="text" id="pass" placeholder="Fill with Your password"> <br><br>
+        <input type="text" id="pass" placeholder="Fill with Your Password"> <br><br>
         
 
         <input type="submit">
