--- a/2apl.html
+++ b/2apl.html
@@ -6,7 +6,21 @@
     <title>Document</title>
 </head>
 <body>
-    
+        <table border="1" width="400px" align="center">
+            <thead >
+                <tr>
+                    <th>Name</th>
+                    <th>Age</th>
+                    <th>Contact</th>
+                    <th>Person</th>
+                    <th>Price</th>
+                </tr>
+            </thead>
+
+            <tbody id="datafile" align="center">
+
+            </tbody>
+        </table>
 
 
     <script src="2apl.js"></script>
