--- a/2apl.html
+++ b/2apl.html
@@ -14,6 +14,7 @@
                     <th>Contact</th>
                     <th>Person</th>
                     <th>Price</th>
+                    <th>Delete</th>
                 </tr>
             </thead>
 
