--- a/5aplform.html
+++ b/5aplform.html
@@ -6,24 +6,23 @@
     <title>Document</title>
 </head>
 <body>
-    <form>
-        Name<input type="text" id="name"><br><br>
-        Age<input type="text" id="name"><br><br>
-        Contact<input type="text" id="name"><br><br>
-        Person<input type="text" id="name"><br><br>
+    <form action="">
+        
+        Name : <input type="text" id="name"><br><br>
+        Age : <input type="text" id="age"><br><br>
+        Contact : <input type="text" id="cont"><br><br>
+        Person : <input type="text" id="per"><br><br>
+        <!-- Address : <input type="text" id="add"><br><br>
         Choose Country : <select id="country">
-            <option value="India">India</option>
-
-
+            <option value="India">India</option> -->
 
         </select><br><br>
-        Price<input type="text" id="name"><br><br>
 
-        <input type="submit" value="Booknow">
+        <input type="submit" value="Book Now"  id="btn"  onclick="return Book()">
 
     </form>
 
 
-    
+    <script src="2apl.js" ></script>
 </body>
 </html>
