--- a/2apl.html
+++ b/2apl.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body>
+<body onload="fetchData()">
         <table border="1" width="400px" align="center">
             <thead >
                 <tr>
