--- a/2apl.html
+++ b/2apl.html
@@ -15,6 +15,7 @@
                     <th>Person</th>
                     <th>Price</th>
                     <th>Delete</th>
+                    <th>Update</th>
                 </tr>
             </thead>
 
@@ -22,6 +23,9 @@
 
             </tbody>
         </table>
+        <br>
+
+        <div id="showdata"></div>
 
 
     <script src="2apl.js"></script>
