--- a/5aplform.html
+++ b/5aplform.html
@@ -18,7 +18,7 @@
 
         </select><br><br>
 
-        <input type="submit" value="Book Now"  id="btn"  onclick="return Book()">
+        <input type="submit" value="Book Now" id="btn" onclick="return book()">
 
     </form>
 
