--- a/2apl.html
+++ b/2apl.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/brands.min.css" integrity="sha512-58P9Hy7II0YeXLv+iFiLCv1rtLW47xmiRpC1oFafeKNShp8V5bKV/ciVtYqbk2YfxXQMt58DjNfkXFOn62xE+g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body onload="fetchData()">
         <table border="1" width="400px" align="center">
@@ -14,7 +16,7 @@
                     <th>Contact</th>
                     <th>Person</th>
                     <th>Price</th>
-                    <th>Delete</th>
+                    <th><i class="fa-solid fa-user-xmark" style="color: #ed0707;"></i></th>
                     <th>Update</th>
                 </tr>
             </thead>
@@ -25,7 +27,7 @@
         </table>
         <br>
 
-        <div id="showdata"></div>
+        <div id="showdata" align="center"></div>
 
 
     <script src="2apl.js"></script>
