--- a/2apl.html
+++ b/2apl.html
@@ -8,16 +8,17 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body onload="fetchData()">
-        <table border="1" width="400px" align="center">
+    
+        <table border="1" width="500px" align="center">
             <thead >
-                <tr>
-                    <th>Name</th>
-                    <th>Age</th>
-                    <th>Contact</th>
-                    <th>Person</th>
-                    <th>Price</th>
-                    <th><i class="fa-solid fa-user-xmark" style="color: #ed0707;"></i></th>
-                    <th>Update</th>
+                <tr bgcolor="lightblue">
+                    <th><i class="fa-solid fa-id-badge" style="color: #f17006;"></i> Name</th>
+                    <th> <i class="fa-solid fa-square-binary" style="color: #FFD43B;"></i> Age</th>
+                    <th> <i class="fa-solid fa-file-contract"></i> Contact</th>
+                    <th><i class="fa-solid fa-people-roof"  style="color:rgb(40, 19, 202);"></i> Person</th>
+                    <th><i class="fa-solid fa-indian-rupee-sign" style="color:green;"></i> Price</th>
+                    <th><i class="fa-solid fa-user-xmark" style="color: #ed0707;"></i> Delete</th>
+                    <th><i class="fa-solid fa-file-pen" style="color:#8c00fffd;"></i> Edit</th>
                 </tr>
             </thead>
 
