--- a/5aplform.html
+++ b/5aplform.html
@@ -6,7 +6,10 @@
     <title>Document</title>
 </head>
 <body>
-    <form action="">
+
+    <h1>Data Form</h1>
+
+    <h4>    <form action="">
         
         Name : <input type="text" id="name"><br><br>
         Age : <input type="text" id="age"><br><br>
@@ -20,7 +23,8 @@
 
         <input type="submit" value="Book Now" id="btn" onclick="return book()">
 
-    </form>
+    </form> </h4>
+
 
 
     <script src="2apl.js" ></script>
