--- a/26marform.html
+++ b/26marform.html
@@ -9,7 +9,7 @@
         <h1>.... SIGNUP_PAGE ....</h1>
 
     <h2>
-     <form action="" onsubmit="return data()">
+     <form action="" onsubmit="return sin()">
 
         <label for="">Name :</label>
         <input type="text" id="name" placeholder="Fill With Your Name"> <br><br>
