--- a/login.html
+++ b/login.html
@@ -7,13 +7,13 @@
 </head>
 <body>
     <h1>LOGIN PAGE</h1>
-    <form action="" onsubmit="return dt()">
+    <form action="" onsubmit="return lin()">
 
         <label for="">Name :</label>
-        <input type="text" id="name" placeholder="Fill With Your Name"> <br><br>
+        <input type="text" id="lname" placeholder="Fill With Your Name"> <br><br>
 
         <label for="">Password  :</label>
-        <input type="text" id="pass" placeholder="Fill with Your Password"> <br><br>
+        <input type="text" id="lpass" placeholder="Fill with Your Password"> <br><br>
         
 
         <input type="submit">
@@ -21,6 +21,6 @@
      </form>
 
 
-    <script src="login.js"></script>
+    <script src="26marform.js"></script>
 </body>
 </html>
