--- a/5aplform.html
+++ b/5aplform.html
@@ -6,25 +6,25 @@
     <title>Document</title>
 </head>
 <body>
+    <div align="center">
+                             <h1>Booking Form</h1>
+        <h4>    
+            <form action="">
+            
+                    Name : <input type="text" id="name"><br><br>
+                    Age : <input type="text" id="age"><br><br>
+                    Contact : <input type="text" id="cont"><br><br>
+                    Person : <input type="text" id="per"><br><br>
+                    <!-- Address : <input type="text" id="add"><br><br>
+                    Choose Country : <select id="country">
+                        <option value="India">India</option> -->
 
-    <h1>Data Form</h1>
+                    <!-- </select><br><br> -->
 
-    <h4>    <form action="">
-        
-        Name : <input type="text" id="name"><br><br>
-        Age : <input type="text" id="age"><br><br>
-        Contact : <input type="text" id="cont"><br><br>
-        Person : <input type="text" id="per"><br><br>
-        <!-- Address : <input type="text" id="add"><br><br>
-        Choose Country : <select id="country">
-            <option value="India">India</option> -->
-
-        </select><br><br>
-
-        <input type="submit" value="Book Now" id="btn" onclick="return book()">
-
-    </form> </h4>
-
+                    <input type="submit" value="Book Now" id="btn" onclick="return book()">
+            </form> 
+         </h4>
+    </div>
 
 
     <script src="2apl.js" ></script>
